--- a/app/views/toolbox/_equalizer.html.haml
+++ b/app/views/toolbox/_equalizer.html.haml
@@ -1,6 +1,4 @@
 
-.equalizer
-  .label.left= "#{label}"
-  .level.left
-  .level.left
-  .level.left
+.equalizer.left
+  .label= "#{label}"
+  .level
