--- a/app/views/toolbox/_calibrations.html.haml
+++ b/app/views/toolbox/_calibrations.html.haml
@@ -8,7 +8,9 @@
       Based on what is written, can one say that the student ...
 
     .question= "Identified the key insights needed to solve the problem ?"
-    - Yardstick.insights.order(:weight).each do |y|
+    .question{ :mcq => :yes}= "has correctly answered the multiple choice question ?"
+
+    - Yardstick.where('insight = ? OR mcq = ?', true, true).order(:weight).each do |y|
       .root-cause{ :marker => "#{y.id}" }
         .bottomline= "#{y.bottomline}"
         .meaning= "#{y.meaning}"
