Initial support for mcqs in grading-abacus ..
Not tested. So, expect bug fixes

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1394,6 +1394,18 @@ li {
       color: white ;
     } 
   } 
+
+  #abacus {
+    .level {
+      &[mcq='true'] { display: none ; }
+    }
+    &[mcq] {
+      .level {
+        &[mcq='false'], &:not([mcq]) { display: none ; }
+        &[mcq='true'] { display: block ; }
+      } 
+    } 
+  } 
 } 
 
 
