Students & teachers can now see reasons behind the marks ..
.. for every graded question in their respective consoles

--- a/app/views/teachers/_reportcards.html.haml
+++ b/app/views/teachers/_reportcards.html.haml
@@ -11,6 +11,8 @@
   #testpaper
   #student
   #preview
+    #overview.purgeable
+    = render :partial => 'toolbox/calibrations'
 
 #report-card-controls.top-panel-controls
   %ul.no-bullets
