--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1233,6 +1233,16 @@ li {
   } 
 }
 
+#report-cards-summary, #worksheets-summary {
+  .calibrations { 
+    margin: { 
+      top: 25px ;
+      left: 7.5% ;
+    } 
+    width: 85% ;
+  } 
+} 
+
 .calibrations { 
   font-size: 11px ;
   text-transform: lowercase ;
