--- a/app/views/teachers/_calibrations.html.haml
+++ b/app/views/teachers/_calibrations.html.haml
@@ -1,5 +1,6 @@
 
 - calibrations = Calibration.enabled.order('mcq_id DESC').order(:allotment)
+- nonmcq = calibrations.where('mcq_id IS NULL')
 
 #calibrations-summary
   #calibrations.left
@@ -7,7 +8,7 @@
       %ul
         - calibrations.each_with_index do |m,j|
           %li{ :colour => "#{m.colour?.to_s}" }
-            %a.left{ :href => '#', :marker => "#{m.id}" }= "#{m.mcq_id.nil? ? "G#{j+1}" : "M#{j-11}" }"
+            %a.left{ :href => '#', :marker => "#{m.id}" }= "#{m.mcq_id.nil? ? "G#{j+1}" : "M#{j + 1 - nonmcq.count}" }"
             .marks-out-of.right
               = text_field_tag :allotment, nil, :name => "allotment[#{m.id}]", :size => 4, :maxlength => 4,
                 :id => "allotment_#{m.id}", :marker => "#{m.id}"
