--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -47,7 +47,7 @@
 #workbench-controls.top-panel-controls
   %ul.no-bullets
     = minor_link :for => 'grading', :as => 'scans to grade', 
-                 :with => {:panels => {:side => '#ungraded-responses', :wide => '#grading-canvas'}}
+                 :with => {:panels => {:side => '#ungraded-responses', :wide => '#grading-console'}}
     = minor_link :for => 'db-slots', :as => 'new db slots'
     = minor_link :for => 'new-scans', :as => 'receive scans'
     = minor_link :for => 'suggestions', :as => 'typeset these', 
