--- a/app/views/toolbox/_colour_picker.html.haml
+++ b/app/views/toolbox/_colour_picker.html.haml
@@ -12,8 +12,8 @@
 
 #colour-picker
   %div.left
-    %div{ :colour => :pink }
+    %div{ :colour => :crosses }
   %div.left
-    %div{ :colour => :orange }
+    %div{ :colour => :exclamations }
   %div.left
-    %div{ :colour => :green }
+    %div{ :colour => :checks }
