[Big One]: Doing away with the concept of teacher-customizable grades ...
Bottomline: We will stand by our judgement. The teacher can change the 'marks'
if she wants to ( tbd )

Doing away with the concept of customizable grades has 2 main advanatges:
  1. we don't have to worry about presenting a potentially increasing list of
     calibrations for the teacher to customize
  2. we can add / subtract calibrations as we please, thereby making our feedback
     more pertinent

--- a/app/views/examiners/_abacus.html.haml
+++ b/app/views/examiners/_abacus.html.haml
@@ -6,7 +6,7 @@
     %div.left
       #current-question
       #current-student
-  = semantic_form_for :grade, :url => assign_grade_path, :remote => true do |f|
+  = semantic_form_for :grade, :url => calibrate_path, :remote => true do |f|
     #abacus.as-accordion
       .scroll-heading{ :marker => 0 }= "are the key insights evident?"
       #insight.scroll-content.measure
