--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -26,6 +26,10 @@
         = submit_tag 'next', :class => :right
       .form-fields.as-accordion
   #question-options
+    #testpaper-span
+      %div.left= "# of pages"
+      .superscript= "+ 0 blank"
+      .medium-ticker.right= "0 pgs"
     = form_tag 'teacher/build_quiz', :remote => true, :method => :put do |f| 
       .submit-buttons
         = text_field_tag :quiz_name, nil, :placeholder => "give the quiz a name", :size => 20
