[Teacher]: First draft of dispute resolution panel ...
A teacher can override the system assigned marks here - assuming the student
has contested the marks

Also, we will henceforth have standardized JSON keys for loading data into a ticker,
 a numeric field and any other component we might add in the future to a swiss-knife.

There should be no need to pass ticker=' ... '  arguments to methods like displayJson
and loadJson

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -8,6 +8,7 @@
 
     = render :partial => 'teachers/assignquiz'
     = render :partial => 'teachers/buildquiz'
+    = render :partial => 'teachers/disputed'
     = render :partial => 'teachers/queue_status'
     = render :partial => 'teachers/reportcards'
     = render :partial => 'teachers/sektions'
