--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -223,6 +223,14 @@ p > a, div > a {
       font-weight: bold ;
     } 
   } 
+
+  > input[type="text"] {
+    height: 10px ; 
+    background: transparent ;
+    border: none ;
+    font-size: 12px ;
+    color: $gradians-blue ;
+  }
 } 
 
 .measure > .level { 
