[Teacher]: Added ability to submit new marks for contested responses ..
Still need to do away with the colour coding of marks in #report-cards and
 #my-worksheets though

--- a/app/views/toolbox/_swiss_knife.html.haml
+++ b/app/views/toolbox/_swiss_knife.html.haml
@@ -25,6 +25,7 @@
   .label.left= "#{label}"
   %a.link.left{:href => '#', :marker => '#', :parent => '#', :p_id => '#'}
   %div.superscript.right
+  %div.constant.right
   %input.numeric.right{ :type => :text, :maxlength => 4 }
   %input.button.right{ :type => :button, :disabled => true }
   %select.right.difficulty.select{ :name => "difficulty[#{marker}]", :disabled => true, :type => :select}
