--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -224,14 +224,14 @@ p > a, div > a {
     } 
   } 
 
-  > input[type="text"] {
+  > input[type="text"], > .constant {
+    color: white ;
     height: 10px ; 
     background: transparent ;
     border: none ;
     font-size: 12px ;
-    color: white ; 
     text-align: right ;
-    max-width: 25px ;
+    width: 40px ;
     padding: { 
       top: 4px ;
       bottom: 4px ;
@@ -239,12 +239,36 @@ p > a, div > a {
       right: 0px ;
     } 
   }
+
+  > .constant { 
+    color: $gradians-blue ;
+  }
+
+  > input[type="text"] {
+    border-bottom: 1px solid $orange ;
+    border-radius: 0px ;
+    margin-left: 12px ;
+  }
   
   > .superscript { 
-    color: $gradians-blue ;
+    // color: $gradians-blue ;
     font-size: 9px ;
     margin-top: 3px ;
     font-weight: bold ;
+  } 
+} 
+
+#disputes { 
+  > .swiss-knife { 
+    > .micro-ticker { 
+      margin-right: 0px ;
+      color: $orange ;
+    } 
+
+    > .constant { 
+      font-size: 10px ;
+      margin-left: 5px ;
+    } 
   } 
 } 
 
