--- a/app/views/teachers/_disputed.html.haml
+++ b/app/views/teachers/_disputed.html.haml
@@ -1,2 +1,5 @@
 
-#disputed
+= form_tag overwrite_marks_path, :remote => true, :method => :put, :id => 'disputed' do |f| 
+  .submit-buttons
+    = submit_tag 'submit', :class => :right
+  #disputes.purgeable
