All abacus behavioral logic contained within the JS itself ..
Previously, there was back and forth between the examiner and the server
for what next to show. Now, all of that logic is in the JS. Not only do
  the # number of requests to the server reduce, the whole thing is just faster
  because latency is gone

--- a/app/views/examiners/_ungraded.html.haml
+++ b/app/views/examiners/_ungraded.html.haml
@@ -12,5 +12,11 @@
   #pending-pages
   #pending-scans
     #list-pending.hidden
+    #flash-memory.hidden
+      - Calibration.enabled.each do |m|
+        %div{ :marker => "#{m.id}", :i => "#{m.insight_id}", 
+        :f => "#{m.formulation_id}", 
+        :c => "#{m.calculation_id}",
+        :m => "#{m.mcq_id}" }
     = render :partial => 'examiners/abacus'
 
