Grouping disputes by quiz ..
List of quizzes is rendered as an accordion

--- a/app/views/teachers/_disputed.html.haml
+++ b/app/views/teachers/_disputed.html.haml
@@ -2,4 +2,4 @@
 = form_tag overwrite_marks_path, :remote => true, :method => :put, :id => 'disputed' do |f| 
   .submit-buttons
     = submit_tag 'submit', :class => :right
-  #disputes.purgeable
+  #disputes.as-accordion
