--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -148,7 +148,7 @@ p > a, div > a {
     weight: normal ;
   }
   position: absolute ;
-  color: $gradians-blue ;
+  color: white ; 
   text-transform: lowercase ;
 }
 
