[Imp]: First draft of capability to upload student list .xls
For now, only Admins can use this capability. In the future, paying teachers will
be allowed to use it too

There are some constraints on what the uploaded spreadsheet should contain / be like:
  1. It should be a Microsoft spreadsheet - preferably .xls
  2. It should contain either one or two columns only
  3. If it contains one column - then that column should contain the full name
  4. It it contains two columns, then the first should have the first name and the
     second the last name
  5. The first column of the spreadsheet should not be empty
  6. Only the first worksheet in the spreadsheet is considered

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -142,6 +142,12 @@ p > a, div > a {
   }
 }
 
+.popup { 
+  font-size: 10px ; 
+  color: $orange ;
+  text-transform: lowercase ;
+} 
+
 .data-point-label {
   font: {
     size: 10px ;
