--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -23,6 +23,7 @@
     = render :partial => 'examiners/ungraded'
     = render :partial => 'examiners/pending_suggestions'
     = render :partial => 'examiners/blockDbSlots'
+    = render :partial => 'admin/upload_xls'
 
     = render :partial => 'schools/admin-view'
     = render :partial => 'courses/summary'
