--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -142,11 +142,13 @@ p > a, div > a {
   }
 }
 
+/*
 .popup { 
   font-size: 10px ; 
   color: $orange ;
   text-transform: lowercase ;
 } 
+*/
 
 .data-point-label {
   font: {
