.micro-ticker is now simply called .swiss-knife > .ticker ..

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -500,7 +500,7 @@ span.unhappyMessage {
   font-size: 85% ;
 }
 
-.micro-ticker {
+.swiss-knife > .ticker {
   color: #ffa500 ; 
   font: {
     size: 8pt ;
