[Student Console]: Scores for individual questions are shown for 1 second only ..
To see one's score on a question, click on the ticker thay says 'show score'.
You can then see the score for 1 second

The point is to de-emphasize the importance of marks and forcing the student
instead to focus on the qualitative judgement being shown

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -549,7 +549,7 @@ span.unhappyMessage {
       background-color: $panel-colour ;
       color: white ;
       padding: 2px 6px ;
-      width: 12% ;
+      min-width: 12% ;
     } 
   }
 }
