--- a/app/views/toolbox/_colour_picker.html.haml
+++ b/app/views/toolbox/_colour_picker.html.haml
@@ -15,5 +15,10 @@
   %div
     %input{ :type => :button, :id => 'undo-btn', :value => 'undo last'} 
 
-  %div{ :section => "true" }= "Shortcuts"
+  %div{ :section => "true" }= "One-click submit"
+  #one-click-submit
+    %input{ :type => :button, :i => 14, :f => 19, :c => 26, :value => "Blank!" }
+    %input{ :type => :button, :i => 15, :f => 19, :c => 26, :value => "Not Maths!" }
+    %input{ :type => :button, :i => 37, :f => 20, :c => 26, :value => "Plain wrong" }
+    %input{ :type => :button, :i => 18, :f => 24, :c => 28, :value => "Spot on" }
     
