Scanbot download points to new WinForms based Scanbot

--- a/app/views/welcome/download.html.haml
+++ b/app/views/welcome/download.html.haml
@@ -12,7 +12,7 @@
   #scanbot-getting-it
     .half-column.left
       %h4= "STEP 1"
-      = link_to 'Click to download', '#'
+      = link_to 'Click to download', "#{Gutenberg['server']}/Scanbot/Scanbot.application"
     .half-column.right
       %h4= "STEP 2"
       %p
